test-net-cloud/k8s/utils/headlamp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32080
  selector:
    app.kubernetes.io/name: headlamp
